<resources>
    <string name="app_name">Przepisomat</string>
    <string name="tytu">Tytuł</string>
    <string name="czas_przygotowania">Czas przygotowania</string>
    <string name="trudno">Trudność</string>
    <string name="ilo_porcji">Ilość porcji</string>
    <string name="sk_adniki_potrzebne">Potrzebne składniki:</string>
    <string name="main_header">Najpopularniejsze przepisy</string>
</resources>
