<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/tytu" />

            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/czas_przygotowania"
                android:layout_weight="0.9"/>

            <TextView
                android:id="@+id/detailsTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trudno"
                android:layout_weight="0.9"/>

            <TextView
                android:id="@+id/detailsDif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ilo_porcji"
                android:layout_weight="0.9"/>

            <TextView
                android:id="@+id/detailsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sk_adniki_potrzebne"
                android:paddingTop="20dp"
                />

        </TableRow>

        <TableRow>
            <pl.przepisomat.przepisomat.components.BulletTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bulletSteps"
                android:paddingStart="40dp"
                />
        </TableRow>
        <TableRow>
            <ListView
                android:id="@+id/listSteps"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/activity_base"/>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
